# AA228V_FinalProject

./: .gitignore  Manifest.toml  Project.toml  README.md  hello.py  pyproject.toml
config/env/: cartpole.yaml
config/extra_data/: cartpole_balanced.yaml  cartpole_tilt_left.yaml  cartpole_tilt_right.yaml
config/train/: dynamics_learner_cartpole.yaml  il_agent_cartpole.yaml  rl_agent_cartpole.yaml
data/: expert_dataset.npz
data/datasets/: BC_target_rollouts.npz  dl_data_test.npz  dl_data_train.npz  dl_target_rollouts.npz  expert_data_test.npz  expert_data_train.npz  qvalues.npy  value_iteration.npz
data/models/: BC_policy.pt  dynamics_learner.pt  dynamics_learner_128_128_128_128.pt  dynamics_learner_16_16.pt  dynamics_learner_64_64_64.pt  expert_policy.pt  expert_policy.pth  grid_vals.pkl  imitation_policy.pth
data/scores/: BC_policy_scores.npz  dynamics_learner_128_128_128_128_scores.npz  dynamics_learner_16_16_scores.npz  dynamics_learner_64_64_64_scores.npz  (+1 more)
notebooks/: analyze_dynamics_learner.py  attribute_agent.py  attribute_agent_for_new_sample.py  attribute_data.py  inspect_training_data.py  plot_trajectories.jl  training_data_inspection.py  visualize_policy.py  visualize_recoverable_states.py
src/: AA228V_FinalProject.jl  cartpole.jl  data_attribution.py  dispersion.jl  distributions.jl  dynamics_learning.py  extra_data.py  failure_probability.jl  find_failure.jl  imitation_learning.py  ood_experiment.py  reinforcement_learning.py  run_cartpole.jl  set_utils.py  specification.jl  system.jl  train.py  utils.py  value_iteration.py
(+15 files in other folders)
